--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 config.php
 /admin/config.php
+
+!index.html
+
+/image/cache/
+/system/storage/cache/
+/system/storage/logs/
+/system/storage/session/
