--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ config.php
 /system/storage/cache/
 /system/storage/logs/
 /system/storage/session/
+.buildpath
+.project
+.settings/org.eclipse.php.core.prefs
